--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
+					<button class="btn btn-primary" id="turn_on">Enciende las luces</button>
+					<button class="btn btn-primary" id="play">Play music</button>
+					<button class="btn btn-primary" id="bannar_coming">Vamos a decorar :)</button>
+					<button class="btn btn-primary" id="balloons_flying">Globoss</button>
+					<button class="btn btn-primary" id="cake_fadein">Un pastel muy delicioso</button>
+					<button class="btn btn-primary" id="light_candle"> Enciende la vela</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="story">Un mensaje para ti</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
