--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<img src="banner.png" class="bannar">
+                <img src="lees.jpeg" class="lees">
 			</div>
 		</div>
 		<div class="row cake-cover">
@@ -110,28 +111,17 @@
 				<p>Be happy! </p>
 				<p>Today is the day</p>
 				<p> you were brought </p>
-				<p>into this world </p>
-				<p>to be a</p>
-				<p>blessing and inspiration </p>
-				<p>to the people around you!</p>
-				<p><strong>You are a wonderful person!</strong></p>
-				<p>May you be given more birthdays</p>
-				<p>to fulfill all of your dreams!</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday </p>
-				<p>Siky Nana</p>
-				<p>&hearts;</p> 
-				<p>&hearts;</p>
-				<p>&hearts;</p>
-				<p> from Vicky </p>
+
+				<p> from V.E </p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
 					<button class="btn btn-primary" id="turn_on">Enciende las luces</button>
-					<button class="btn btn-primary" id="play">Play music</button>
-					<button class="btn btn-primary" id="bannar_coming">Vamos a decorar :)</button>
+					<button class="btn btn-primary" id="play">Play Music</button>
+					<button class="btn btn-primary" id="bannar_coming">Vamos a decorar xd</button>
+                    <button class="btn btn-primary" id="lees_coming">Sonrie para la foto :)</button>
 					<button class="btn btn-primary" id="balloons_flying">Globoss</button>
 					<button class="btn btn-primary" id="cake_fadein">Un pastel muy delicioso</button>
 					<button class="btn btn-primary" id="light_candle"> Enciende la vela</button>
