--- a/index.html
+++ b/index.html
@@ -108,11 +108,15 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Be happy! </p>
-				<p>Today is the day</p>
-				<p> you were brought </p>
-
-				<p> from V.E </p>
+				<p>No te rindas nunca</p>
+				<p>eres una persona muy especial</p>
+				<p>que transmite mucho</p>
+				<p>Tus acciones y decisiones</p>
+				<p>te enseñaran</p>
+				<p>a salir adelante</p>
+				<p>No pierdas esa sonrisa</p>
+				<p>tan bonita que tienes</p>
+                <p><strong>Never Give UP</strong></p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
@@ -120,7 +124,7 @@
 				<div class="col-md-6 text-center col-md-offset-3">
 					<button class="btn btn-primary" id="turn_on">Enciende las luces</button>
 					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Vamos a decorar xd</button>
+					<button class="btn btn-primary" id="bannar_coming">Vamos a decorar un poco xd</button>
                     <button class="btn btn-primary" id="lees_coming">Sonrie para la foto :)</button>
 					<button class="btn btn-primary" id="balloons_flying">Globoss</button>
 					<button class="btn btn-primary" id="cake_fadein">Un pastel muy delicioso</button>
