--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<button class="btn btn-primary" id="play">Play Music</button>
 					<button class="btn btn-primary" id="bannar_coming">Vamos a decorar un poco xd</button>
                     <button class="btn btn-primary" id="lees_coming">Sonrie para la foto :)</button>
-					<button class="btn btn-primary" id="balloons_flying">Globoss</button>
+					<button class="btn btn-primary" id="balloons_flying">Globitoss</button>
 					<button class="btn btn-primary" id="cake_fadein">Un pastel muy delicioso</button>
 					<button class="btn btn-primary" id="light_candle"> Enciende la vela</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
